src/test/deca/syntax/invalid/parser/hex.deca
// Description:
//    Test invalide du parseur.
//
// Resultats:
//    erreur ligne 7

0x0x
